@@ -19,3 +19,9 @@ Patches for auto generate password
 
 Nick Marino <nickm@kryptontech.com>
 A number of bug reports
+
+Paris Stamatopoulos <mobius@hack.gr>
+The HOWTO document
+
+Ulrich Walcher <uwalcher@bcore.de>
+A few attribute help pages
