@@ -1,0 +1,37 @@
+<html>
+<head>
+<title>Nomadix-MaxBytesUp Help Page</title>
+<link rel="stylesheet" href="../style.css">
+</head>
+<body bgcolor="#80a040" background="../images/greenlines1.gif" link="black" alink="black">
+<center>
+<table border=0 width=540 cellpadding=1 cellspacing=1>
+<tr valign=top>
+<td width=340></td>
+<td bgcolor="black" width=400>
+	<table border=0 width=100% cellpadding=2 cellspacing=0>
+	<tr bgcolor="#907030" align=right valign=top><th><font color="white">Nomadix-MaxBytesUp Help Page</font>&nbsp;</th></tr>
+	</table>
+</td></tr>
+<tr bgcolor="black" valign=top><td colspan=2>
+	<table border=0 width=100% cellpadding=12 cellspacing=0 bgcolor="#ffffd0" valign=top>
+	<tr><td>
+<br>
+<center>
+<pre>
+Attribute Numer: 26
+Value: Integer
+</pre>
+<pre>
+  This attribute specifies the maximum number of single bytes a user
+  is allowed to upload, means send from his machine to the internet.
+</td></tr>
+<tr><td align=center>
+<a href="javascript:window.close();"><b>Close Window</b></a>
+</td></tr>
+</center>
+</table>
+</tr>
+</table>
+</body>
+</html>
